cosmetic fixes